--- a/templates/_base.html
+++ b/templates/_base.html
@@ -31,10 +31,10 @@
 
 <body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}">
 
+{% include 'partials/_header.html' %}
 
 <div id="wrapper">
 
-    {% include 'partials/_navigation.html' %}
 
     <div id="page-wrapper">
         {#        <div class="page-header-bar row">#}
@@ -70,6 +70,6 @@
 
 {% block extrabody %}
 {% endblock %}
-
+{% include 'partials/_footer.html' %}
 </body>
 </html>
