--- a/apps/news/templates/news/news_list.html
+++ b/apps/news/templates/news/news_list.html
@@ -1,5 +1,15 @@
 {% extends "_base.html" %}
 
+{% block end_head %}
+
+{% endblock %}
+
+
 {% block content %}
+
+{% endblock %}
+
+{% block footer %}
+{{ block.super }}
 
 {% endblock %}
