--- a/templates/_base.html
+++ b/templates/_base.html
@@ -46,9 +46,8 @@
 
        <div class="videobg">
                     
-                    <video controls="false"  autoplay="autoplay" poster="{% static 'vid/vid.jpg' %}" style="width:100%" title="Nep-Html5" _muted>
-<source src="{% static 'vid/vid.m4v' %}" type="video/mp4" />
-<source src="{% static 'vid/vid.webm' %}" type="video/webm" />
+                    <video controls="false"  autoplay="autoplay" poster="{% static 'vid/vid.jpg' %}" style="width:100%" title="Nepathya Here" muted>
+<source src="{% static 'vid/vid.mp4' %}" type="video/mp4" />
 </video>
 
                    </div>
