nep.css intendation fix

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -108,6 +108,7 @@
         </div>
     </div>
 </div>
+<div class="content"></div>
 {% block content %}
     <div class="main">
         <div class="content_box">
@@ -232,7 +233,7 @@
 {#    }, false);#}
 {#    function hideURLbar() {#}
 {#        window.scrollTo(0, 1);#}
-{#    } #}
+{#    }#}
 {#</script>#}
 {#<script src="{% static 'js/libs/jquery.easydropdown.js' %}"></script>#}
 <!-- Add fancyBox main JS and CSS files -->
@@ -252,7 +253,6 @@
 {#        });#}
 {#    });#}
 {#</script>#}
-
 </body>
 
 <script type="text/javascript">
