--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -92,10 +92,10 @@ ul.wmuSliderPagination,
 }
 
 ul.nav {
-    background: #9a1e6f; /* Old browsers */
-    background: -moz-linear-gradient(45deg, #9a1e6f 0%, #dfea0b 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, #9a1e6f 0%, #dfea0b 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, #9a1e6f 0%, #dfea0b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: transparent; /* Old browsers */
+    /*background: -moz-linear-gradient(45deg, #9a1e6f 0%, #dfea0b 100%); /!* FF3.6-15 *!/*/
+    /*background: -webkit-linear-gradient(45deg, #9a1e6f 0%, #dfea0b 100%); /!* Chrome10-25,Safari5.1-6 *!/*/
+    /*background: linear-gradient(45deg, #9a1e6f 0%, #dfea0b 100%); /!* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!/*/
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9a1e6f', endColorstr='#dfea0b', GradientType=1); /* IE6-9 fallback on horizontal gradient */
 
     -webkit-clip-path: polygon(1% 1%, 73% 5%, 98% 94%, 3% 100%);
@@ -210,8 +210,4 @@ ul.nav li a {
 
 .footer-grid_last {
     width: 22%;
-}
-
-.content {
-    min-height: 500px;
 }
