--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,9 +39,10 @@ body a{
 	margin-left:4em;
 }
 .header_right{
-	float:right;
-	margin-top: 2em;
-	width: 24%;
+	float: left;
+    /* margin-top: 0em; */
+    width: 24%;
+    padding-left: 18px
 }
 .lang_list{
 	float:left;
@@ -273,7 +274,7 @@ ul.quick_access li.check{
 	margin-top: 1.3em;
 }
 .banner_right {
-	float: right;
+	/*float: right;*/
 	margin-top: 4em;
 	width: 45%;
 	padding-right: 10em;
