--- a/templates/_base.html
+++ b/templates/_base.html
@@ -35,16 +35,16 @@
             <div class="logo">
                 <a href="index.html"><img src="{% static 'img/logo.png' %}" alt=""/></a>
             </div>
-                            <ul class="right-nav">
-                    <li><a href="">About Band</a></li>
-                    <li><a href="">Music</a></li>
-                    <li><a href="">Videos</a></li>
-                    <li><a href="">Update</a></li>
-                    <li><a href="">Shows</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Booking</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
+            <ul class="right-nav">
+                <li><a href="#">About Band</a></li>
+                <li><a href="#">Music</a></li>
+                <li><a href="#">Videos</a></li>
+                <li><a href="#">Update</a></li>
+                <li><a href="#">Shows</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Booking</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
 
             <div class="header_right">
                 <ul class="social">
@@ -67,26 +67,23 @@
             <div class="clearfix"></div>
         </div>
         <div class="index-banner">
-
-
             <div class="example1">
-
                 <article style="position: absolute; width: 100%;">
                     <div class="banner-wrap">
-{#                        <div class="bannertop_box">#}
-{#                            <div class="menu_box">#}
-{#                                <ul class="nav">#}
-{#                                    <li><a href="#">About Band</a></li>#}
-{#                                    <li><a href="#">Music</a></li>#}
-{#                                    <li><a href="#">Videos</a></li>#}
-{#                                    <li><a href="#">Updates</a></li>#}
-{#                                    <li><a href="#">Shows</a></li>#}
-{#                                    <li><a href="#">Gallery</a></li>#}
-{#                                    <li><a href="#">Booking</a></li>#}
-{#                                    <li><a href="#">Contact</a></li>#}
-{#                                </ul>#}
-{#                            </div>#}
-{#                        </div>#}
+                        {#                        <div class="bannertop_box">#}
+                        {#                            <div class="menu_box">#}
+                        {#                                <ul class="nav">#}
+                        {#                                    <li><a href="#">About Band</a></li>#}
+                        {#                                    <li><a href="#">Music</a></li>#}
+                        {#                                    <li><a href="#">Videos</a></li>#}
+                        {#                                    <li><a href="#">Updates</a></li>#}
+                        {#                                    <li><a href="#">Shows</a></li>#}
+                        {#                                    <li><a href="#">Gallery</a></li>#}
+                        {#                                    <li><a href="#">Booking</a></li>#}
+                        {#                                    <li><a href="#">Contact</a></li>#}
+                        {#                                </ul>#}
+                        {#                            </div>#}
+                        {#                        </div>#}
                         <div class="banner_right">
                             <h1>We're Nepathya</h1>
 
