--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1853,7 +1853,10 @@ p.cart a{
 }
 @media (max-width:1024px){
 .header_right {
-	width: 30%;
+	width: 32%;
+}
+.banner_right{
+    margin-left: 1em !important;
 }
 .welcome_box h2 {
 	font-size: 1.5em;
@@ -1936,8 +1939,11 @@ ul.size li {
 .contact_logo {
 	left: 4em;
 }
+
 }
+
 @media (max-width:800px){
+
 .banner_right h1 {
 	font-size: 2em;
 }
@@ -2026,7 +2032,7 @@ i.pin {
 	width: 31%;
 }
 .header_right {
-	width: 48%;
+	width: 55%;
 	margin-top: 3em;
 }
 .wmuSliderPagination a {
@@ -2048,7 +2054,7 @@ i.pin {
 	font-size: 1.7em;
 }
 .header {
-	background-size: 100%;
+	background-size: cover;
 	padding-bottom: 1em
 }
 .wmuSliderPagination {
