banner_right font-size comment for responsive

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1861,15 +1861,15 @@ p.cart a{
 .welcome_box h2 {
 	font-size: 1.5em;
 }
-.banner_right h1 {
-	font-size: 3.2em;
-}
+/*.banner_right h1 {*/
+	/*font-size: 3.2em;*/
+/*}*/
 .wmuSliderPrev {
 	left: 54em;
 }
-.banner_right p {
-	font-size: 1em;
-}
+/*.banner_right p {*/
+	/*font-size: 1em;*/
+/*}*/
 .search input[type="text"] {
 	width: 84.22%;
 }
@@ -1944,12 +1944,12 @@ ul.size li {
 
 @media (max-width:800px){
 
-.banner_right h1 {
-	font-size: 2em;
+.banner_right {
+	padding-right: 5em;
 }
-.banner_right p {
-	font-size: 0.85em;
-}
+/*.banner_right p {*/
+	/*font-size: 0.85em;*/
+/*}*/
 .wmuSliderPrev {
 	left: 41em;
 }
@@ -2032,8 +2032,8 @@ i.pin {
 	width: 31%;
 }
 .header_right {
-	width: 55%;
-	margin-top: 3em;
+	width: 80%;
+	/*margin-top: 3em;*/
 }
 .wmuSliderPagination a {
 	width: 30px;
@@ -2044,15 +2044,15 @@ i.pin {
 .welcome_box {
 	display: none;
 }
-.banner_right p {
-	font-size: 0.8125em;
-}
+/*.banner_right p {*/
+	/*font-size: 0.8125em;*/
+/*}*/
 .logo {
 	margin-left: 1em;
 }
-.banner_right h1 {
-	font-size: 1.7em;
-}
+/*.banner_right h1 {*/
+	/*font-size: 1.7em;*/
+/*}*/
 .header {
 	background-size: cover;
 	padding-bottom: 1em
