--- a/templates/_base.html
+++ b/templates/_base.html
@@ -36,19 +36,19 @@
                 <a href="index.html"><img src="{% static 'img/logo.png' %}" alt=""/></a>
             </div>
             <ul class="right-nav">
-                <li><a href="#">About Band</a></li>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Videos</a></li>
-                <li><a href="#">Update</a></li>
-                <li><a href="#">Shows</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Booking</a></li>
-                <li><a href="#">Contact</a></li>
+                <a href="#"><li>About Band</li></a>
+                <a href="#"><li>Music</li></a>
+                <a href="#"><li>Videos</li></a>
+                <a href="#"><li>Update</li></a>
+                <a href="#"><li>Shows</li></a>
+                <a href="#"><li>Gallery</li></a>
+                <a href="#"><li>Booking</li></a>
+                <a href="#"><li>Contact</li></a>
             </ul>
 
             <div class="header_right">
                 <ul class="social">
-                    <li><a href=""> <i class="fb"> </i> </a></li>
+                    <li><a href=""><i class="fb"> </i> </a></li>
                     <li><a href=""><i class="tw"> </i> </a></li>
                     <li><a href=""><i class="utube"> </i> </a></li>
                     <li><a href=""><i class="pin"> </i> </a></li>
