--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,6 @@
         <div class="content_box">
             <div class="container latest-vid">
                 <div class="row">
-
-
                     <h3 class="m_2">Latest Videos</h3>
 
                     <div class="content_grid">
@@ -26,7 +24,7 @@
                                                 <div class="info"><i class="fa fa-play" aria-hidden="true"></i></div>
                                             </div>
                                             <div class="product_container">
-                                                <div class="cart-left">
+                                                <div class="">
                                                     <p class="title">Mainache Cham Chami</p>
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -47,7 +45,7 @@
                                                 <div class="info"><i class="fa fa-play" aria-hidden="true"></i></div>
                                             </div>
                                             <div class="product_container">
-                                                <div class="cart-left">
+                                                <div class="">
                                                     <p class="title">Mero Hajur</p>
                                                 </div>
                                                 <div class="clearfix"></div>
@@ -68,7 +66,7 @@
                                                 <div class="info"><i class="fa fa-play" aria-hidden="true"></i></div>
                                             </div>
                                             <div class="product_container">
-                                                <div class="cart-left">
+                                                <div class="">
                                                     <p class="title">Resham</p>
                                                 </div>
                                                 <div class="clearfix"></div>
