--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -147,9 +147,12 @@ ul.nav li a {
 }
 
 .product_image .mask {
-    top: 50%;
+    top: 56%;
     left: 50%;
     transform: translate(-50%, -120%);
+    background-color: #333;
+    border-radius: 50%;
+    color: #FFFFFF;
 }
 
 .instagram h3, h3.m_2,
@@ -157,9 +160,11 @@ ul.nav li a {
 .instagram i {
     text-align: center;
     color: #FFF;
-    letter-spacing: 12px;
+    letter-spacing: 6px;
     font-weight: 200;
-    margin: 80px 0;
+    margin: 25px 0;
+    font-family: 'Railway';
+    font-size: 36px;
 }
 
 .latest-vid .inner_content {
@@ -177,7 +182,7 @@ ul.nav li a {
 .latest-vid .inner_content .product_image img {
     width: 100%;
     height: 250px;
-    border: 10px solid rgba(255, 255, 255, .6);
+    /*border: 10px solid rgba(255, 255, 255, .6);*/
 }
 
 .latest-vid .inner_content .cart-left {
@@ -188,8 +193,8 @@ ul.nav li a {
 
 .latest-vid .inner_content .title {
     text-align: center;
-    color: #333;
-    background: #dfea0b;
+    color: #FFF;
+    /*background: #333;*/
     display: inline-block;
     padding: 10px
 }
@@ -248,4 +253,17 @@ ul.right-nav a:hover {
 ul.social li a i:hover{
     background-color: #333;
 
+}
+
+.main {
+    background-color: #000000;
+}
+
+.mask .info i {
+    margin-left: 3px;
+}
+
+.mask:hover {
+    background: #fff51f;
+    color: #000;
 }
