--- a/templates/index.html
+++ b/templates/index.html
@@ -83,26 +83,26 @@
         </div>
     </div>
 
-
-    <div class="container instabox">
+    <div class="instabox">
+    <div class="container">
         <div class="instagram_top">
             <div class="instagram text-center">
-                <h3><i class="fa fa-instagram" aria-hidden="true"></i>instagram:&nbsp;<span
-                        class="small">#nepathya</span></h3>
+                <h3>Nepathya Instagram</h3>
             </div>
             <ul class="instagram_grid">
-                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i1.jpg' %}"
-                                                                               class="img-responsive" alt=""/></a></li>
-                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i2.jpg' %}"
-                                                                               class="img-responsive" alt=""/></a></li>
-                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i3.jpg' %}"
-                                                                               class="img-responsive" alt=""/></a></li>
-                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i4.jpg' %}"
-                                                                               class="img-responsive" alt=""/></a></li>
-                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i5.jpg' %}"
-                                                                               class="img-responsive" alt=""/></a></li>
-                <li class="last_instagram"><a class="popup-with-zoom-anim" href="#small-dialog1"><img
-                        src="{% static 'img/i6.jpg' %}" class="img-responsive" alt=""/></a></li>
+                <iframe src="//users.instush.com/collage/?cols=11&rows=7&sl=true&user_id=2860198090&username=roshanshrestha01&sid=-1&susername=-1&tag=-1&stype=mine&bg=transparent&space=true&rd=false&grd=false&gpd=6&drp=false&pin=true&t=999999vMLdqhTpVo-JMJ41AZGOeWxCUt4OPmBkmaIXrmKfZE1QtoXuWFVUVyTwOshX5OtDB5pQ2ZRxGao" allowtransparency="true" frameborder="0" scrolling="no"  style="display:block;width:1145px;height:733px;border:none;overflow:visible;" ></iframe>
+{#                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i1.jpg' %}"#}
+{#                                                                               class="img-responsive" alt=""/></a></li>#}
+{#                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i2.jpg' %}"#}
+{#                                                                               class="img-responsive" alt=""/></a></li>#}
+{#                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i3.jpg' %}"#}
+{#                                                                               class="img-responsive" alt=""/></a></li>#}
+{#                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i4.jpg' %}"#}
+{#                                                                               class="img-responsive" alt=""/></a></li>#}
+{#                <li><a class="popup-with-zoom-anim" href="#small-dialog1"><img src="{% static 'img/i5.jpg' %}"#}
+{#                                                                               class="img-responsive" alt=""/></a></li>#}
+{#                <li class="last_instagram"><a class="popup-with-zoom-anim" href="#small-dialog1"><img#}
+{#                        src="{% static 'img/i6.jpg' %}" class="img-responsive" alt=""/></a></li>#}
                 <div class="clearfix"></div>
                 <div id="small-dialog1" class="mfp-hide">
                     <div class="pop_up">
@@ -113,6 +113,7 @@
             </ul>
         </div>
 
+    </div>
     </div>
     </div>
 
