--- a/static/css/style.css
+++ b/static/css/style.css
@@ -959,7 +959,7 @@ ul.list1 a {
 	font-family: 'Roboto', sans-serif;
 	margin-bottom:2em;
 }
-.search_footer input[type="text"] {
+.search_footer input[type="text"], .feedback-form input, .feedback-form textarea {
 	padding: 6px 10px;
 	outline: none;
 	color: #a39e28;
@@ -970,7 +970,15 @@ ul.list1 a {
 	background: #fff51f;
 	text-transform: uppercase;
 }
-.search_footer input[type="submit"] {
+.feedback-form input, .feedback-form textarea {
+    width: 90%;
+}
+
+.feedback-form p {
+    margin: 2px;
+}
+
+.search_footer input[type="submit"], .feedback-form input[type="submit"] {
 	background:#000;
 	padding:6px 8px;
 	cursor: pointer;
@@ -987,8 +995,11 @@ ul.list1 a {
 	-o-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
 }
-.search_footer input[type="submit"]:hover{
-	background:#cb2027;
+.feedback-form input[type="submit"] {
+    width: 100px;
+}
+.search_footer input[type="submit"]:hover, .feedback-form input[type="submit"]:hover {
+	background:#333;
 }
 p.footer_desc{
 	color: #fff;
@@ -2120,6 +2131,8 @@ i.pin {
 	margin-right: 0;
 	margin-bottom:2em;
 }
+
+
 .footer-grid h3 {
 	margin-bottom: 0.5em;
 }
