--- a/templates/_base.html
+++ b/templates/_base.html
@@ -39,10 +39,9 @@
                 <a href="#"><li>About Band</li></a>
                 <a href="#"><li>Music</li></a>
                 <a href="#"><li>Videos</li></a>
-                <a href="#"><li>Update</li></a>
-                <a href="#"><li>Shows</li></a>
+                <a href="#"><li>Events</li></a>
                 <a href="#"><li>Gallery</li></a>
-                <a href="#"><li>Booking</li></a>
+                <a href="#"><li>News</li></a>
                 <a href="#"><li>Contact</li></a>
             </ul>
 
