--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -280,3 +280,8 @@ ul.social li a i:hover{
 #footer-grid-large {
     width: 35% !important;
 }
+
+.messages li {
+    color: #fff51f;
+    list-style: none;
+}
