--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,47 +1,49 @@
-{% load i18n %}
+{% load static %}
+<div class="header-top">
+    <div class="logo">
+        <a href="index.html"><img src="{% static 'img/logo.png' %}" alt=""/></a>
+    </div>
+    <ul class="right-nav">
+        <a href="#">
+            <li>About Band</li>
+        </a>
+        <a href="#">
+            <li>Music</li>
+        </a>
+        <a href="#">
+            <li>Videos</li>
+        </a>
+        <a href="#">
+            <li>Events</li>
+        </a>
+        <a href="#">
+            <li>Gallery</li>
+        </a>
+        <a href="#">
+            <li>News</li>
+        </a>
+        <a href="#">
+            <li>Contact</li>
+        </a>
+    </ul>
 
-<div class="container-fluid">
-   <!-- Second navbar for profile settings -->
-    <nav class="navbar navbar-inverse">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-4">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">{% trans "Nepathya" %}</a>
+    <div class="header_right">
+        <ul class="social">
+            <li><a href=""><i class="fb"> </i> </a></li>
+            <li><a href=""><i class="tw"> </i> </a></li>
+            <li><a href=""><i class="utube"> </i> </a></li>
+            <li><a href=""><i class="pin"> </i> </a></li>
+            <li><a href=""><i class="instagram"> </i> </a></li>
+        </ul>
+        <div class="lang_list">
+            {#              <select tabindex="4" class="dropdown">#}
+            {#                <option value="" class="label" value="">En</option>#}
+            {#                <option value="1">English</option>#}
+            {#                <option value="2">Nepali</option>#}
+            {##}
+            {#              </select>#}
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar-collapse-4">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contact</a></li>
-            <li>
-              <a class="btn btn-default btn-outline btn-circle"  data-toggle="collapse" href="#nav-collapse4" aria-expanded="false" aria-controls="nav-collapse4">Profile <i class=""></i> </a>
-            </li>
-          </ul>
-          <ul class="collapse nav navbar-nav nav-collapse" role="search" id="nav-collapse4">
-            <li><a href="#">Support</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img class="img-circle" src="https://pbs.twimg.com/profile_images/588909533428322304/Gxuyp46N.jpg" alt="maridlcrmn" width="20" /> Maridlcrmn <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">My profile</a></li>
-                <li><a href="#">Favorited</a></li>
-                <li><a href="#">Settings</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Logout</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
-    </nav><!-- /.navbar -->
-</div><!-- /.container-fluid -->
+        <div class="clearfix"></div>
+    </div>
+    <div class="clearfix"></div>
+</div>
