--- a/apps/discography/templates/discography/album_list.html
+++ b/apps/discography/templates/discography/album_list.html
@@ -1,5 +1,42 @@
 {% extends "base.html" %}
 
+{% block subtitle %}
+    Ablums |
+{% endblock %}
+
 {% block content %}
-    {{ object_list }}
+    <div class="container">
+        <h2 class="h2">Ablums</h2>
+        <hr/>
+
+        {% for obj in object_list %}
+        <div class="album-wrapper">
+            <div class="row">
+                <div class="col-xs-3 col-sm-3 col-md-2 album-img">
+                    <img src="{{ obj.cover_image.url }}" alt=""/>
+                </div>
+                <div class="col-xs-7 col-sm-7 col-md-8 album-detail">
+                    <p>
+                        {{ obj.title }} <span>| {{ obj.year }}</span>
+                    </p>
+                    <p>
+                        <i class="fa fa-calendar-o" aria-hidden="true"></i> <i>Released date:</i> {{ obj.released_date }}
+                    </p>
+                    <p>
+                        <i class="fa fa-dot-circle-o" aria-hidden="true"></i> <i>Label:</i> {{ obj.label }}
+                    </p>
+                    <p>
+                        <i class="fa fa-music" aria-hidden="true"></i> <i>Genre:</i> {{ obj.genre }}
+                    </p>
+                </div>
+                <div class="tracks col-xs-2 col-sm-2 col-md-2">
+                    <p>Tracks</p>
+                    <div class="total-tracks-count">
+                        <span>{{ obj.tracks.all.count }}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 {% endblock %}
