--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -251,7 +251,7 @@ ul.right-nav a:hover {
     /*padding: 10px 15px 10px 40px;*/
 }
 
-ul.social li a i:hover{
+ul.social li a i:hover {
     background-color: #333;
 
 }
@@ -286,7 +286,6 @@ ul.social li a i:hover{
     list-style: none;
 }
 
-
 /*.base css*/
 
 .base {
@@ -294,5 +293,64 @@ ul.social li a i:hover{
 }
 
 .base section {
-    min-height: 1000px;
+    min-height: 800px;
+    color: #FFFFFF;
+}
+
+.base section .h2 {
+    font-family: 'Raleway', 'sans-serif';
+}
+
+.base section hr {
+    border-top: 1px solid #ccc;
+    margin: 1em 0
+}
+
+.album-wrapper {
+    width: 100%;
+    height: 112px;
+    background-color: rgba(51, 51, 51, .2);
+    padding: 7px;
+    border: 2px solid #333333;
+    margin-bottom: 5px;
+}
+
+.album-wrapper:hover {
+    border: 2px solid #fff51f;
+}
+
+.album-wrapper .album-img img {
+    /*width: 100%;*/
+    height: 92px;
+}
+
+.album-wrapper .album-detail p:first-child {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.tracks p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.total-tracks-count {
+    text-align: center;
+    font-size: 40px;
+    border: 1px solid #333;
+    border-radius: 50%;
+    width: 62px;
+    margin: auto;
+    background: #333;
+    line-height: 55px;
+}
+
+.album-wrapper:hover .total-tracks-count {
+    background-color: #fff51f;
+    color: #000;
+}
+
+.total-tracks-count span {
+    vertical-align: text-bottom;
 }
