--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <title>{% block title %} Nepathya {% endblock %}</title>
+    <title>{% block title %}{% block subtitle %} {% endblock %} Nepathya {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css'/>
@@ -21,6 +21,7 @@
     {% endblock %}
 </head>
 <body class="{% block body_class %}base{% endblock %}">
+
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -28,15 +29,18 @@
         {% endfor %}
     </ul>
 {% endif %}
+
 {% include 'partials/_header.html' %}
+
 <section>
-
+    {% block content %}
+    {% endblock %}
 </section>
-
 
 {% block footer %}
     {% include 'partials/_footer.html' %}
 {% endblock %}
+
 <script src="{% static 'js/libs/jquery.min.js' %}"></script>
 <script type="text/javascript">
     $(".messages").delay(3000).slideUp(300);
