--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
 {% endblock %}
 
 <script src="{% static 'js/libs/jquery.min.js' %}"></script>
+<script src="{% static 'js/libs/jquery.jplayer.js' %}"></script>
+<script src="{% static 'js/libs/ttw-music-player-min.js' %}"></script>
+<script src="{% static 'js/base.js' %}"></script>
 <script type="text/javascript">
     $(".messages").delay(3000).slideUp(300);
 </script>
