--- a/apps/discography/templates/discography/album_detail.html
+++ b/apps/discography/templates/discography/album_detail.html
@@ -1,5 +1,6 @@
-{% extends "_base.html" %}
+{% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-{{ object }}
+    {{ object }}
 {% endblock %}
