jPlayerPlaylist and blue skin added

--- a/apps/discography/templates/discography/album_detail.html
+++ b/apps/discography/templates/discography/album_detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static thumbnail %}
 
+{% block end_head %}
+    <link href="{% static 'css/jplayer.blue.monday.min.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <div class="album-wrapper" id="detail-view">
@@ -17,6 +21,7 @@
                                 {{ object.title }} <span>| {{ object.year }}</span>
                             </p>
                         </a>
+
                         <p>
                             <i class="fa fa-calendar-o" aria-hidden="true"></i> <i>Released
                             date:</i> {{ object.released_date }}
@@ -32,9 +37,79 @@
                     </div>
                     <div class="track-list">
                         {{ object.tracks.all }}
+                        <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+                        <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
+                            <div class="jp-type-single">
+                                <div class="jp-gui jp-interface">
+                                    <div class="jp-controls">
+                                        <button class="jp-play" role="button" tabindex="0">play</button>
+                                        <button class="jp-stop" role="button" tabindex="0">stop</button>
+                                    </div>
+                                    <div class="jp-progress">
+                                        <div class="jp-seek-bar">
+                                            <div class="jp-play-bar"></div>
+                                        </div>
+                                    </div>
+                                    <div class="jp-volume-controls">
+                                        <button class="jp-mute" role="button" tabindex="0">mute</button>
+                                        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+                                        <div class="jp-volume-bar">
+                                            <div class="jp-volume-bar-value"></div>
+                                        </div>
+                                    </div>
+                                    <div class="jp-time-holder">
+                                        <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+                                        <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+                                        <div class="jp-toggles">
+                                            <button class="jp-repeat" role="button" tabindex="0">repeat</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="jp-details">
+                                    <div class="jp-title" aria-label="title">adsf</div>
+                                </div>
+                            </div>
+                            <div class="jp-playlist">
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+
+{% block end_body %}
+    <script src="{% static 'js/libs/jquery.jplayer.js' %}"></script>
+    <script src="{% static 'js/libs/jplayer.playlist.min.js' %}"></script>
+    <script src="{% static 'js/libs/ttw-music-player-min.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var playlist = new jPlayerPlaylist({
+                jPlayer: "#jquery_jplayer_1",
+                cssSelectorAncestor: "#jp_container_1"
+            }, [
+                {
+                    title: "Cro Magnon Man",
+                    artist: "The Stark Palace",
+                    mp3: "http://www.jplayer.org/audio/mp3/TSP-01-Cro_magnon_man.mp3",
+                    oga: "http://www.jplayer.org/audio/ogg/TSP-01-Cro_magnon_man.ogg",
+                }
+            ],{
+                playlistOptions: {
+                    enableRemoveControls: true
+                },
+                swfPath: "/js",
+                supplied: "ogv, m4v, oga, mp3",
+                smoothPlayBar: true,
+                keyEnabled: true,
+{#                audioFullScreen: true // Allows the audio poster to go full screen via keyboard#}
+            });
+            });
+
+    </script>
 {% endblock %}
