--- a/apps/discography/templates/discography/album_detail.html
+++ b/apps/discography/templates/discography/album_detail.html
@@ -2,7 +2,7 @@
 {% load static thumbnail %}
 
 {% block end_head %}
-    <link href="{% static 'css/jplayer.blue.monday.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/jplayer.blue.monday.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content %}
@@ -15,64 +15,78 @@
                     {% endthumbnail %}
                 </div>
                 <div class="col-xs-7 col-sm-8 col-md-7">
-                    <div class=" album-detail">
-                        <a href="{% url 'album_detail' object.id %}">
-                            <p>
-                                {{ object.title }} <span>| {{ object.year }}</span>
-                            </p>
-                        </a>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class=" album-detail">
+                                <a href="{% url 'album_detail' object.id %}">
+                                    <p>
+                                        {{ object.title }} <span>| {{ object.year }}</span>
+                                    </p>
+                                </a>
 
-                        <p>
-                            <i class="fa fa-calendar-o" aria-hidden="true"></i> <i>Released
-                            date:</i> {{ object.released_date }}
-                        </p>
+                                <p>
+                                    <i class="fa fa-calendar-o" aria-hidden="true"></i> <i>Released
+                                    date:</i> {{ object.released_date }}
+                                </p>
 
-                        <p>
-                            <i class="fa fa-dot-circle-o" aria-hidden="true"></i> <i>Label:</i> {{ object.label }}
-                        </p>
+                                <p>
+                                    <i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+                                    <i>Label:</i> {{ object.label }}
+                                </p>
 
-                        <p>
-                            <i class="fa fa-music" aria-hidden="true"></i> <i>Genre:</i> {{ object.genre }}
-                        </p>
-                    </div>
-                    <div class="track-list">
-                        {{ object.tracks.all }}
-                        <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-                        <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-                            <div class="jp-type-single">
-                                <div class="jp-gui jp-interface">
-                                    <div class="jp-controls">
-                                        <button class="jp-play" role="button" tabindex="0">play</button>
-                                        <button class="jp-stop" role="button" tabindex="0">stop</button>
-                                    </div>
-                                    <div class="jp-progress">
-                                        <div class="jp-seek-bar">
-                                            <div class="jp-play-bar"></div>
-                                        </div>
-                                    </div>
-                                    <div class="jp-volume-controls">
-                                        <button class="jp-mute" role="button" tabindex="0">mute</button>
-                                        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
-                                        <div class="jp-volume-bar">
-                                            <div class="jp-volume-bar-value"></div>
-                                        </div>
-                                    </div>
-                                    <div class="jp-time-holder">
-                                        <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-                                        <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-                                        <div class="jp-toggles">
-                                            <button class="jp-repeat" role="button" tabindex="0">repeat</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="jp-details">
-                                    <div class="jp-title" aria-label="title">adsf</div>
-                                </div>
+                                <p>
+                                    <i class="fa fa-music" aria-hidden="true"></i> <i>Genre:</i> {{ object.genre }}
+                                </p>
                             </div>
-                            <div class="jp-playlist">
-                                <ul>
-                                    <li></li>
-                                </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+
+
+                            <div class="track-list">
+                                <h3>Tracks</h3>
+
+                                <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+                                <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
+                                    <div class="jp-type-single">
+                                        <div class="jp-gui jp-interface">
+                                            <div class="jp-controls">
+                                                <button class="jp-play" role="button" tabindex="0">play</button>
+                                                <button class="jp-pause" role="button" tabindex="0">asdf</button>
+                                                <button class="jp-stop" role="button" tabindex="0">stop</button>
+                                            </div>
+                                            <div class="jp-progress">
+                                                <div class="jp-seek-bar">
+                                                    <div class="jp-play-bar"></div>
+                                                </div>
+                                            </div>
+                                            <div class="jp-volume-controls">
+                                                <button class="jp-mute" role="button" tabindex="0">mute</button>
+                                                <button class="jp-volume-max" role="button" tabindex="0">max volume
+                                                </button>
+                                                <div class="jp-volume-bar">
+                                                    <div class="jp-volume-bar-value"></div>
+                                                </div>
+                                            </div>
+                                            <div class="jp-time-holder">
+                                                <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+                                                <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+                                                <div class="jp-toggles">
+                                                    <button class="jp-repeat" role="button" tabindex="0">repeat</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="jp-details">
+                                            <div class="jp-title" aria-label="title">adsf</div>
+                                        </div>
+                                    </div>
+                                    <div class="jp-playlist">
+                                        <ul>
+                                            <li></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -90,26 +104,30 @@
     <script type="text/javascript">
         $(document).ready(function () {
             var playlist = new jPlayerPlaylist({
-                jPlayer: "#jquery_jplayer_1",
-                cssSelectorAncestor: "#jp_container_1"
-            }, [
-                {
-                    title: "Cro Magnon Man",
-                    artist: "The Stark Palace",
-                    mp3: "http://www.jplayer.org/audio/mp3/TSP-01-Cro_magnon_man.mp3",
-                    oga: "http://www.jplayer.org/audio/ogg/TSP-01-Cro_magnon_man.ogg",
-                }
-            ],{
-                playlistOptions: {
-                    enableRemoveControls: true
-                },
-                swfPath: "/js",
-                supplied: "ogv, m4v, oga, mp3",
-                smoothPlayBar: true,
-                keyEnabled: true,
-{#                audioFullScreen: true // Allows the audio poster to go full screen via keyboard#}
-            });
-            });
+                        jPlayer: "#jquery_jplayer_1",
+                        cssSelectorAncestor: "#jp_container_1"
+                    },
+                    [],
+                    {
+                        playlistOptions: {
+                            {#                            enableRemoveControls: true#}
+                        },
+                        swfPath: "/js",
+                        supplied: "ogv, m4v, oga, mp3",
+                        smoothPlayBar: true,
+                        keyEnabled: true,
+                        poster: null,
+                    });
 
+            {% for obj in object.tracks.all %}
+                {% if obj.mp3 %}
+                    var track = {
+                        title: "{{ obj.title }}",
+                        mp3: "{{ obj.mp3.url }}"
+                    };
+                    playlist.add(track)
+                {% endif %}
+            {% endfor %}
+        });
     </script>
 {% endblock %}
