--- a/apps/discography/templates/discography/album_detail.html
+++ b/apps/discography/templates/discography/album_detail.html
@@ -2,19 +2,19 @@
 {% load static thumbnail %}
 
 {% block end_head %}
-    <link href="{% static 'css/jplayer.blue.monday.css' %}" rel="stylesheet" type="text/css">
+    {#    <link href="{% static 'css/jplayer.blue.monday.css' %}" rel="stylesheet" type="text/css">#}
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="album-wrapper" id="detail-view">
             <div class="row">
-                <div class="col-xs-3 col-sm-2 col-md-5 album-img">
+                <div class="col-xs-12 col-sm-2 col-md-5 album-img">
                     {% thumbnail object.cover_image "1000x1000" crop="center" as im %}
                         <a href="{% url 'album_detail' object.id %}"><img src="{{ im.url }}" alt=""/></a>
                     {% endthumbnail %}
                 </div>
-                <div class="col-xs-7 col-sm-8 col-md-7">
+                <div class="col-xs-12 col-sm-8 col-md-7">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class=" album-detail">
@@ -49,33 +49,53 @@
 
                                 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
                                 <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-                                    <div class="jp-type-single">
+                                    <div class="jp-type-single clearfix">
                                         <div class="jp-gui jp-interface">
-                                            <div class="jp-controls">
-                                                <button class="jp-play" role="button" tabindex="0">play</button>
-{#                                                <button class="jp-pause" role="button" tabindex="0">asdf</button>#}
-                                                <button class="jp-stop" role="button" tabindex="0">stop</button>
-                                            </div>
-                                            <div class="jp-progress">
-                                                <div class="jp-seek-bar">
-                                                    <div class="jp-play-bar"></div>
+                                            <div class="row mb10">
+                                                <div class="col-xs-6 col-sm-6">
+                                                    <div class="jp-controls">
+                                                        <i class="jp-previous fa fa-fast-backward" role="button"
+                                                           tabindex="0"></i>
+                                                        <i class="jp-play fa fa-play" role="button" tabindex="0"></i>
+                                                        <i class="jp-pause fa fa-pause" role="button" tabindex="0"></i>
+                                                        <i class="jp-stop fa fa-stop" role="button" tabindex="0"></i>
+                                                        <i class="jp-next fa fa-fast-forward" role="button"
+                                                           tabindex="0"></i>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-6 col-sm-6">
+                                                    <div class="jp-volume-controls">
+                                                        <i class="jp-mute fa fa-volume-off" role="button"
+                                                           tabindex="0"></i>
+
+                                                        <div class="jp-volume-bar">
+                                                            <div class="jp-volume-bar-value"></div>
+                                                        </div>
+                                                        <i class="jp-volume-max fa fa-volume-up" role="button"
+                                                           tabindex="0"></i>
+
+
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="jp-volume-controls">
-                                                <button class="jp-mute" role="button" tabindex="0">mute</button>
-                                                <button class="jp-volume-max" role="button" tabindex="0">max volume
-                                                </button>
-                                                <div class="jp-volume-bar">
-                                                    <div class="jp-volume-bar-value"></div>
+                                            <div class="row">
+                                                <div class="col-xs-12">
+                                                    <div class="jp-progress">
+                                                        <div class="jp-seek-bar">
+                                                            <div class="jp-play-bar"></div>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="jp-time-holder">
+                                                        <div class="jp-current-time pull-left" role="timer"
+                                                             aria-label="time">&nbsp;</div>
+                                                        <div class="jp-duration pull-right" role="timer"
+                                                             aria-label="duration">&nbsp;</div>
+                                                    </div>
+
                                                 </div>
                                             </div>
-                                            <div class="jp-time-holder">
-                                                <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-                                                <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-                                                <div class="jp-toggles">
-                                                    <button class="jp-repeat" role="button" tabindex="0">repeat</button>
-                                                </div>
-                                            </div>
+
                                         </div>
                                         <div class="jp-details">
                                             <div class="jp-title" aria-label="title"></div>
