--- a/apps/discography/templates/discography/album_detail.html
+++ b/apps/discography/templates/discography/album_detail.html
@@ -42,72 +42,77 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-
-
-                            <div class="track-list">
+{#                            <div class="track-list">#}
                                 <h3>Tracks</h3>
-
-                                <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-                                <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-                                    <div class="jp-type-single clearfix">
-                                        <div class="jp-gui jp-interface">
-                                            <div class="row mb10">
-                                                <div class="col-xs-6 col-sm-6">
-                                                    <div class="jp-controls">
-                                                        <i class="jp-previous fa fa-fast-backward" role="button"
-                                                           tabindex="0"></i>
-                                                        <i class="jp-play fa fa-play" role="button" tabindex="0"></i>
-                                                        <i class="jp-pause fa fa-pause" role="button" tabindex="0"></i>
-                                                        <i class="jp-stop fa fa-stop" role="button" tabindex="0"></i>
-                                                        <i class="jp-next fa fa-fast-forward" role="button"
-                                                           tabindex="0"></i>
-                                                    </div>
-                                                </div>
-                                                <div class="col-xs-6 col-sm-6">
-                                                    <div class="jp-volume-controls">
-                                                        <i class="jp-mute fa fa-volume-off" role="button"
-                                                           tabindex="0"></i>
-
-                                                        <div class="jp-volume-bar">
-                                                            <div class="jp-volume-bar-value"></div>
-                                                        </div>
-                                                        <i class="jp-volume-max fa fa-volume-up" role="button"
-                                                           tabindex="0"></i>
-
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-xs-12">
-                                                    <div class="jp-progress">
-                                                        <div class="jp-seek-bar">
-                                                            <div class="jp-play-bar"></div>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="jp-time-holder">
-                                                        <div class="jp-current-time pull-left" role="timer"
-                                                             aria-label="time">&nbsp;</div>
-                                                        <div class="jp-duration pull-right" role="timer"
-                                                             aria-label="duration">&nbsp;</div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="jp-details">
-                                            <div class="jp-title" aria-label="title"></div>
-                                        </div>
-                                    </div>
-                                    <div class="jp-playlist">
-                                        <ul>
-                                            <li></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
+{##}
+{#                                <div id="jquery_jplayer_1" class="jp-jplayer"></div>#}
+{#                                <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">#}
+{#                                    <div class="jp-type-single clearfix">#}
+{#                                        <div class="jp-gui jp-interface">#}
+{#                                            <div class="row mb10">#}
+{#                                                <div class="col-xs-6 col-sm-6">#}
+{#                                                    <div class="jp-controls">#}
+{#                                                        <i class="jp-previous fa fa-fast-backward" role="button"#}
+{#                                                           tabindex="0"></i>#}
+{#                                                        <i class="jp-play fa fa-play" role="button" tabindex="0"></i>#}
+{#                                                        <i class="jp-pause fa fa-pause" role="button" tabindex="0"></i>#}
+{#                                                        <i class="jp-stop fa fa-stop" role="button" tabindex="0"></i>#}
+{#                                                        <i class="jp-next fa fa-fast-forward" role="button"#}
+{#                                                           tabindex="0"></i>#}
+{#                                                    </div>#}
+{#                                                </div>#}
+{#                                                <div class="col-xs-6 col-sm-6">#}
+{#                                                    <div class="jp-volume-controls">#}
+{#                                                        <i class="jp-mute fa fa-volume-off" role="button"#}
+{#                                                           tabindex="0"></i>#}
+{##}
+{#                                                        <div class="jp-volume-bar">#}
+{#                                                            <div class="jp-volume-bar-value"></div>#}
+{#                                                        </div>#}
+{#                                                        <i class="jp-volume-max fa fa-volume-up" role="button"#}
+{#                                                           tabindex="0"></i>#}
+{##}
+{##}
+{#                                                    </div>#}
+{#                                                </div>#}
+{#                                            </div>#}
+{#                                            <div class="row">#}
+{#                                                <div class="col-xs-12">#}
+{#                                                    <div class="jp-progress">#}
+{#                                                        <div class="jp-seek-bar">#}
+{#                                                            <div class="jp-play-bar"></div>#}
+{#                                                        </div>#}
+{#                                                    </div>#}
+{##}
+{#                                                    <div class="jp-time-holder">#}
+{#                                                        <div class="jp-current-time pull-left" role="timer"#}
+{#                                                             aria-label="time">&nbsp;</div>#}
+{#                                                        <div class="jp-duration pull-right" role="timer"#}
+{#                                                             aria-label="duration">&nbsp;</div>#}
+{#                                                    </div>#}
+{##}
+{#                                                </div>#}
+{#                                            </div>#}
+{##}
+{#                                        </div>#}
+{#                                        <div class="jp-details">#}
+{#                                            <div class="jp-title" aria-label="title"></div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+                                    {#                                    <div class="jp-playlist">#}
+                                    {#                                        <ul>#}
+                                    {#                                            <li></li>#}
+                                    {#                                        </ul>#}
+                                    {#                                    </div>#}
+{#                                </div>#}
+{#                            </div>#}
+                            <ul class="tracks">
+                                {% for obj in object.tracks.all %}
+                                    <a href="#">
+                                        <li><i class="fa fa-headphones"></i> {{ obj.title }}</li>
+                                    </a>
+                                {% endfor %}
+                            </ul>
                         </div>
                     </div>
                 </div>
