--- a/apps/discography/templates/discography/track_detail.html
+++ b/apps/discography/templates/discography/track_detail.html
@@ -1,5 +1,7 @@
-{% extends "_base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
-{{ object }}
+    <div class="container">
+        {{ object }}
+    </div>
 {% endblock %}
