album list link in Music _header.html

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -9,7 +9,7 @@
             <a href="#">
                 <li>About Band</li>
             </a>
-            <a href="#">
+            <a href="{% url 'album_list' %}">
                 <li>Music</li>
             </a>
             <a href="#">
