--- a/apps/discography/templates/discography/track_detail.html
+++ b/apps/discography/templates/discography/track_detail.html
@@ -1,7 +1,138 @@
 {% extends "base.html" %}
+{% load thumbnail static %}
 
 {% block content %}
     <div class="container">
-        {{ object }}
+        <div class="album-wrapper" id="track-detail">
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-1 album-img">
+                    {% thumbnail object.cover_image "500x500" crop="center" as im %}
+                        <a href="{% url 'album_detail' object.id %}"><img src="{{ im.url }}" alt=""/></a>
+                    {% endthumbnail %}
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-6 album-detail">
+                    <a href="{% url 'album_detail' object.id %}">
+                        <p>
+                            {{ object.title }} <span>| {{ object.year }}</span>
+                        </p>
+                    </a>
+
+
+                    <p>
+                        <i class="fa fa-calendar-o" aria-hidden="true"></i> <i>Released
+                        date:</i> {{ object.released_date }}
+                    </p>
+
+                    <p>
+                        <i class="fa fa-dot-circle-o" aria-hidden="true"></i> <i>Label:</i> {{ object.label }}
+                    </p>
+
+                    <p>
+                        <i class="fa fa-music" aria-hidden="true"></i> <i>Genre:</i> {{ object.genre }}
+                    </p>
+
+                    <p>
+                        <i class="fa fa-music" aria-hidden="true"></i> <i>Length:</i> {{ object.length }}
+                    </p>
+
+                </div>
+
+                <div class="tracks col-xs-12 col-sm-6 col-md-5">
+                    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+                    <div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
+                        <div class="jp-type-single clearfix">
+                            <div class="jp-gui jp-interface">
+                                <div class="row mb10">
+                                    <div class="col-xs-6 col-sm-6">
+                                        <div class="jp-controls">
+                                            <i class="jp-previous fa fa-fast-backward" role="button"
+                                               tabindex="0"></i>
+                                            <i class="jp-play fa fa-play" role="button" tabindex="0"></i>
+                                            <i class="jp-pause fa fa-pause" role="button" tabindex="0"></i>
+                                            <i class="jp-stop fa fa-stop" role="button" tabindex="0"></i>
+                                            <i class="jp-next fa fa-fast-forward" role="button"
+                                               tabindex="0"></i>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-6 col-sm-6">
+                                        <div class="jp-volume-controls">
+                                            <i class="jp-mute fa fa-volume-off" role="button"
+                                               tabindex="0"></i>
+
+                                            <div class="jp-volume-bar">
+                                                <div class="jp-volume-bar-value"></div>
+                                            </div>
+                                            <i class="jp-volume-max fa fa-volume-up" role="button"
+                                               tabindex="0"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="jp-progress">
+                                            <div class="jp-seek-bar">
+                                                <div class="jp-play-bar"></div>
+                                            </div>
+                                        </div>
+
+                                        <div class="jp-time-holder">
+                                            <div class="jp-current-time pull-left" role="timer"
+                                                 aria-label="time">&nbsp;</div>
+                                            <div class="jp-duration pull-right" role="timer"
+                                                 aria-label="duration">&nbsp;</div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="jp-details">
+                                <div class="jp-title" aria-label="title"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    {% if object.description %}
+                    <h3>Description</h3>
+                    <p>{{ object.description }}</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
+{% endblock %}
+
+{% block end_body %}
+    <script src="{% static 'js/libs/jquery.jplayer.js' %}"></script>
+    <script src="{% static 'js/libs/jplayer.playlist.min.js' %}"></script>
+    <script src="{% static 'js/libs/ttw-music-player-min.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var playlist = new jPlayerPlaylist({
+                        jPlayer: "#jquery_jplayer_1",
+                        cssSelectorAncestor: "#jp_container_1"
+                    },
+                    [],
+                    {
+                        playlistOptions: {
+                            {#                            enableRemoveControls: true#}
+                        },
+                        swfPath: "/js",
+                        supplied: "ogv, m4v, oga, mp3",
+                        smoothPlayBar: true,
+                        keyEnabled: true,
+                        poster: null,
+                    });
+            {% if object.mp3 %}
+                var track = {
+                    title: "{{ object.title }}",
+                    mp3: "{{ object.mp3.url }}"
+                };
+                playlist.add(track)
+            {% endif %}
+        });
+    </script>
 {% endblock %}
