--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -3,7 +3,7 @@
 
     <div class="header-top">
         <div class="logo">
-            <a href="index.html"><img src="{% static 'img/logo.png' %}" alt=""/></a>
+            <a href="/"><img src="{% static 'img/logo.png' %}" alt=""/></a>
         </div>
         <ul class="right-nav">
             <a href="#">
