--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -15,7 +15,7 @@
             <a href="#">
                 <li>Videos</li>
             </a>
-            <a href="#">
+            <a href="{% url 'events_list' %}">
                 <li>Events</li>
             </a>
             <a href="#">
