--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -333,7 +333,7 @@ ul.social li a i:hover {
     color: #FFFFFF;
 }
 
-.album-wrapper .album-detail p:first-child {
+.album-wrapper .album-detail p:first-child, .events-detail p.title {
     font-weight: bold;
     font-size: 20px;
 }
@@ -383,8 +383,8 @@ ul.social li a i:hover {
 }
 
 #track-detail h3 {
-    margin-top: 10px ;
-    margin-bottom: 0 ;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 
 .tracks {
@@ -399,6 +399,28 @@ ul.social li a i:hover {
     margin-top: 4px;
     border-bottom: 1px solid rgba(255, 245, 31, .4);
     font-family: 'Raleway', 'sans-serif';
+}
+
+/*Events css*/
+
+.events-detail p.title {
+    color: #fff51f;
+}
+
+.events-detail p i {
+    margin-right: 5px;
+}
+
+.events img {
+    width: 90%;
+}
+
+.ticket-location {
+    padding-left: 25px;
+}
+
+.ticket-location p span:not(:last-child)::after{
+    content: ',';
 }
 
 /*jPlayer custom CSS*/
@@ -455,6 +477,7 @@ ul.social li a i:hover {
 #track-detail {
     height: auto;
 }
+
 /* Diagonal Background Bars */
 .jp-play-bar,
 .jp-volume-bar-value {
