--- a/apps/events/templates/events/event_list.html
+++ b/apps/events/templates/events/event_list.html
@@ -21,7 +21,7 @@
                     </p>
 
                     <p>
-                        <i class="fa fa-dollar"></i> {{ object.entry_fee }}
+                        <i class="fa fa-inr"></i> {{ object.entry_fee }}
                     </p>
 
                     <p>
