--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -299,6 +299,7 @@ ul.social li a i:hover {
 
 .base section .h2 {
     font-family: 'Raleway', 'sans-serif';
+    text-align: left;
 }
 
 .base section hr {
@@ -423,6 +424,77 @@ ul.social li a i:hover {
     content: ',';
 }
 
+
+/*Video css*/
+.video-wrapper {
+    background-color: rgba(51, 51, 51, .2);
+    width: 250px;
+    height: 285px;
+    display: inline-block;
+    border: 1px solid #333;
+    margin: 5px 15px;
+}
+
+.video-wrapper .video-image {
+    position: relative;
+    width: 100%;
+    height: 82%;
+}
+
+.video-wrapper .video-info {
+    width: 100%;
+    height: 18%;
+    background-color: #333333;
+    text-align: center;
+    font-family: 'Railway', sans-serif;
+    font-weight: bold;
+    padding: 15px;
+}
+
+.video-wrapper:hover .video-image img {
+    opacity: .2;
+}
+
+.video-wrapper:hover .video-info {
+    background-color: #fff51f;
+    color: #000000;
+}
+
+.video-wrapper .video-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.video-image .mask {
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -120%);
+    border-radius: 50%;
+    position: absolute;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    padding: 10px 15px;
+    background: rgba(255, 255, 255, 0.82);
+    -moz-box-shadow: rgba(0, 0, 0, 0.16) 0 2px 8px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0 2px 8px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0 2px 8px;
+    color: #000;
+    font-size: 0.85em;
+    font-weight: bold;
+}
+
+.video-wrapper:hover .video-image .mask {
+    opacity: 1;
+    background-color: #fff51f;
+    color: #000000;
+}
+
+.video-list:not(.h2) {
+    text-align: center;
+}
 /*jPlayer custom CSS*/
 #jquery_jplayer_1 {
     display: none;
